Update book api to include all CRUD operations. Add check for PATCH routes to require at least one field
